First commit to use maven and Specs2